using Core.Interfaces;

using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace Core.Data;
public struct ResourceHandle
{
  public int Id;
  public IResourceDesc Desc;
}
